# InstRO

./: .clang-format  .clang_complete  .gitignore  CMakeLists.txt  LICENSE.txt  Makefile.am  cconfig.h.in  configure.ac  formatAll.sh  make-config  readme.md
examples/: CMakeLists.txt  ExampleMain.cpp  Makefile.am  README  RoseCallpathToKernelInstrumentor.cpp  RoseConstructASTExporter.cpp  RoseInstrumentor.cpp  config_main.cpp  diss_example.cpp  example_main.cpp  main.cxx  readme.md
examples/ClangSrcToSrcFunctionInstrumentor/: Instrumentor.cpp  Makefile.am
examples/ConfigurationLoader/: Makefile.am  main.cpp
examples/targets/: CMakeLists.txt  Fibonacci.cpp  MatrixMultiply.cpp  MergeSort.cpp  diss_example.cpp  testTarget.cpp
lib/: CMakeLists.txt  Makefile  Makefile.am  README  ins-tool.sh  readme.md
lib/include/: instro.h  readme.md  rose.h
lib/include/instro/: Instrumentor.h  Pass.h  PassFactory.h  common.h  config.h  config.h.in  core.h  instrumentor.h  instrumentor.h_old  interface.h  llvmInstRO.h  pass_management.h  readme.md  readme.txt  roseInstRO.h  rose_instrumentor.h
lib/src/: ConfigurationLoader.cpp  Instrumentor.cpp  Pass.cpp  PassFactory.cpp  common.cpp  example_main.cpp  example_main.cxx  instrumentor.cpp  main.cxx  main_rose.cxx  marker.cpp  rose_main.cpp  testTarget.cpp
lib/src/adapterbuilder/: CygProfileFunctionAdapterBuilder.cpp  FunctionPrinterAdapterBuilder.cpp  GenericFunctionAdapterBuilder.cpp  VampirTraceAdapterBuilder.cpp
lib/src/clang/: CMakeLists.txt  ClangInstrumentor.cpp  Instrumentor.cpp
lib/src/contrib/: geimeradapter.cpp
lib/src/core/: CMakeLists.txt  ConstructSet.cpp  ConstructSetManagement.cpp  ConstructTraitType.cpp  Helper.cpp  OrderOfRegistrationBasedPassManager.cpp  Pass.cpp  PassFactory.cpp  PassImplementation.cpp  PassImplemention.cpp  SimplePassManager.cpp  Singleton.cpp
lib/src/example/: CallPathSelector.cpp  CompoundSelector.cpp  ExampleConstructPrinter.cpp  ExampleConstructSet.cpp  ExampleInstrumentor.cpp  ExampleNamedConstructAccess.cpp  NameBasedSelector.cpp
lib/src/llvm/: Register.cpp
lib/src/pass/: CMakeLists.txt
lib/src/rose/: structure.txt
lib/src/selectors/: blackwhitelistselector.cpp  callfrequencyheuristicselector.cpp  callpathselector.cpp  fileoriginselector.cpp  flopcountselector.cpp  includeselector.cpp  nodetypebasedselectors.cpp  openmpselector.cpp  profilebasedselector.cpp  selectorbasedselector.cpp  sourcefileselector.cpp  statementcountselector.cpp
lib/src/support/: BWLFileReader.cpp  ConfigurationLoader.cpp
lib/src/test/: CallPathSelector.cpp
lib/src/tooling/: AnalysisInterface.cpp  CMakeLists.txt  ConstructElevator.cpp  ControlFlowGraph.cpp  ExtendedCallGraph.cpp  IdentifierProvider.cpp  NamedConstructAcces.cpp  NamedConstructAccess.cpp  analysisInterface.cpp
lib/src/utility/: BWLFileReader.cpp  CMakeLists.txt  CommandlineHandling.cpp  ConfigurationLoader.cpp  Environment.cpp  Logger.cpp  functionidentification.cpp  instrobuilder.cpp  matcher.cpp
support/: InstROMeasurementInterface.c  InstROMeasurementInterface.h  Makefile.am  readme.md
support/openmp/: omp.c  omp.h
test/: ApplyRunner.py  BooleanCompoundSelectorTest.cpp  CMakeLists.txt  CallpathSelectorTest.cpp  CompileRunner.py  ConstructElevatorSelectorTest.cpp  ConstructHierarchySelectionTestMain.cpp  DefaultInstrumentationAdapterTest.cpp  FunctionWrapperTestMain.cpp  IMITestInfrastructure.c  IdentifierSelectorTest.cpp  IdentifyerSelectorTest.cpp  Makefile.am  MatcherUnitTest  README  Runner.py  ScorepRegionAdapterTest.cpp  SelectionTestMain.cpp  UniqueCallpathTransformerTestMain.cpp  readme.md
test/clang-instrumenter/: 01_simple.cpp  02_class.cpp  03_multi_return.cpp  04_templates.cpp  05_templates_specialized.cpp  06_templates_explicitly_specialized.cpp  07_templates_explicitly_specialized_macro.cpp  08_vector.cpp  CMakeLists.txt  instrument.sh.in  lit.cfg  lit.site.cfg.in
test/input/: arrowCall.cpp  assignInitInEnum.cpp  callInTemplateCode.cpp  callpath.cpp  callpath2.cpp  callpath3.cpp  callpath4.cpp  callpath5.cpp  callpathMerges.cpp  callpathWhile.cpp  callpathWhile2.cpp  comma.cpp  controlConstructs.cpp  doWhile.cpp  dotCall.cpp  emptyBodies.cpp  expressions.cpp  foo.cpp  foo.in  hideMPI.cpp  identifier.cpp  identifierNesting.cpp  if.cpp  initVariable.cpp  loop.cpp  loop2.cpp  loop3.cpp  main.cpp  main.in  matchingIdentifiers.cpp  memfunc.cpp  multiAssign.cpp  multiVarDecl.cpp  nestedConstructs.cpp  nestedFunction.cpp  ompAtomic.cpp  ompMain.cpp  ompMulti.cpp  ompTask.cpp  opOverload.cpp  (+13 more)
test/input/BooleanCompoundSelectorTest/: expressions.in  foo.in  identifier.in  if.in  loop.in  scopes.in  targets.lst
test/input/CallpathSelectorTest/: callpath.in  callpath2.in  callpath3.in  callpath4.in  callpath5.in  callpathWhile.in  callpathWhile2.in  switchCase.in  targets.lst
test/input/ConstructElevatorTest/: dotCall.in  expressions.in  foo.in  identifier.in  if.in  loop2.in  targets.lst  templContainer.in  templFunc.in  ternaryOp.in
test/input/ConstructHierarchySelectionTest/: arrowCall.in  assignInitInEnum.in  callInTemplateCode.in  callpath.in  comma.in  controlConstructs.in  doWhile.in  dotCall.in  emptyBodies.in  expressions.in  foo.in  identifier.in  if.in  initVariable.in  loop.in  loop2.in  loop3.in  main.in  memfunc.in  multiAssign.in  multiVarDecl.in  nestedFunction.in  ompAtomic.in  ompMain.in  ompMulti.in  ompTask.in  opOverload.in  overloadedFunctions.in  recursion.in  scopes.in  switchCase.in  targets.lst  templContainer.in  ternaryOp.in  test_01.in  unaryOperators.in  whiletest.in
test/input/DefaultInstrumentationAdapterTest/: targets.lst
test/input/FunctionWrapperTest/: callpath.conf  callpath.in  foo.conf  foo.in  hideMPI.conf  hideMPI.in  recursion.conf  recursion.in  simpleMPI.conf  simpleMPI.in  targets.lst
test/input/IdentifierSelectorTest/: callInTemplateCode.in  expressions.in  foo.in  identifier.in  if.in  loop.in  loop2.in  main.in  (+6 more)
test/lib/: ClangTestSupport.h  RoseTestSupport.h  TestAdapter.cpp  TestAdapter.h
test/unittest/: ConstructTraitTypeTest.cpp  MatcherTest.cpp  TestBasic.h
(+427 files in other folders)
